# preprocessor

./: .bettercodehub.yml  .coverage (Copia en conflicto de dragon 2020-02-29)  .coverage (Copia en conflicto de dragon 2020-03-01)  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  README.md  README.rst  README_CrISP_DM.md  README_agent_deep.md  README_data_trimmer copy.md  README_data_trimmer.md  README_feature_selector.md  README_normalizer.md  README_sliding_window.md  README_standardizer.md  README_unbiaser.md  aplicaciones de deep learning.txt  cleaner.py  dataset_analyzer.py  post.bat  preprocessor.bat  pyproject.toml  quick_test.py  requirements.txt  setup.cfg  setup.py  tox.ini
app/: cli.py  config.py  config_handler.py  data_handler.py  data_processor.py  default_plugin.py  error_handler.py  logging_service.py  main.py  plugin_loader.py  plugin_manager.py  plugin_registry.py  validation_service.py
docs/: Makefile  comprehensive_test_results.md  conf.py  critical_review.md  design_acceptance.md  design_integration.md  design_system.md  design_unit.md  final_test_verification.md  index.rst  phase1_completion.md  postprocessing_plugin_completion.md  requirements.txt  test_acceptance.md  test_integration.md  test_system.md  test_unit.md
preprocessor/: preprocessor.py  preprocessor_base.py
tests/: component.py  conftest.py  test_cli_system.py  test_component.py  test_configuration_manager.py  test_data_handler.py  test_data_processor.py  test_data_trimmer.py  test_feature selector.py  test_feature_engineering_plugin_base.py  test_normalization_handler.py  (+9 more)
(+71 files in other folders)
